--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,7 +4,7 @@ spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-targe
 spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
 # Banco de Dados PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/time-sheet-dev?currentSchema=public&serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://localhost:5432/time-sheet?currentSchema=public&serverTimezone=UTC
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
