security configuration completed
configuração da segurança finalizada

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -18,3 +18,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # Configuracao de Logs
 logging.level.root=debug
 logging.file.name=/logs/app.log
+
+
+jwt.secret=mySecretKey1234567890abcdefghijklmnopqrstuvwxyz
+jwt.expiration=86400000 # 24 horas em milissegundos
