--- a/src/main/resources/application-teste.properties
+++ b/src/main/resources/application-teste.properties
@@ -15,3 +15,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
+
+
+jwt.secret=mySecretKey1234567890abcdefghijklmnopqrstuvwxyz
+jwt.expiration=86400000 # 24 horas em milissegundos
