--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,3 +18,9 @@ spring.jpa.properties.hibernate.format_sql=true
 # Configuracao de Logs
 logging.level.root=debug
 logging.file.name=/logs/app.log
+
+
+jwt.secret=mySecretKey1234567890abcdefghijklmnopqrstuvwxyz
+
+# 24 horas em milissegundos
+jwt.expiration=86400000
