--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -24,3 +24,5 @@ jwt.secret=mySecretKey1234567890abcdefghijklmnopqrstuvwxyz
 
 # 24 horas em milissegundos
 jwt.expiration=86400000
+
+springdoc.hide-schemas=true
