--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,31 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# Compiled class file
+*.class
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
-
-### ENV ###
-create.sql
-
-# Ignorar pastas do PostgreSQL e pgAdmin
-pgadmin-data/
-pgdata/
-
-# Outros arquivos/pastas a serem ignorados
+# Log file
 *.log
-node_modules/
-.env
 
-diagrama.txt
+# BlueJ files
+*.ctxt
 
-import.sql
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+.idea/*
+!.idea/codeStyles
+!.idea/runConfigurations
+!.idea/inspectionProfiles
+*.iml
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+./pgadmin-data/*
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
