--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 !.idea/codeStyles
 !.idea/runConfigurations
 !.idea/inspectionProfiles
+!.idea/dataSources
 *.iml
 
 # Package Files #
@@ -26,6 +27,10 @@
 *.rar
 
 ./pgadmin-data/*
+
+/target/*
+
+diagram-4617229342373617992.svg
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
